# sbnutil

./: CMakeLists.txt  README
poms_cfgs/sbnd/test/: MCP2021C_test_sbnutil-gen_g4_detsim_reco1.cfg  MCP2021C_test_sbnutil-reco2_caf.cfg
scripts/: CMakeLists.txt  check_sam_locations.py  clean_sam_scratch_locations.py  dcache_config.py  isartroot.py  metadata_extractor.py  migrate_sam_definitions.py  migrate_sam_files.py  migrate_sam_locations.py  migrate_sam_users.py  sbnpoms_chooser.sh  sbnpoms_flux_injector.sh  sbnpoms_hepevt_extractor.sh  sbnpoms_metadata_extractor.py  sbnpoms_metadata_injector.sh  sbnpoms_runnumber_injector.sh  sbnpoms_wrapperfcl_maker.sh
scripts/sbnd/: produce_fcl_template.sh  sbndpoms_caf_concatenation.sh  sbndpoms_genfclwithrunnumber_maker.sh
ups/: product_deps
